--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "babel-register": "latest",
     "babelrc-rollup": "latest",
     "chai": "latest",
+    "chai-things": "latest",
     "eslint": "latest",
     "istanbul": "latest",
+    "fill-range": "latest",
     "mocha": "latest",
     "rollup": "latest",
     "rollup-plugin-babel": "latest",
